[tool.poetry]
name = "alles-dlp"
version = "0.1.0"
description = ""
authors = ["Eli Saado <eli5saado@gmail.com>"]
readme = "README.md"
packages = [{include = "alles_dlp"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
starlette = "^0.27.0"
validators = "^0.20.0"
yt-dlp = "^2024.3.10"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "alles_dlp.main:start_dev"
start_prod = "alles_dlp.main:start"